prevent select overflow

--- a/layout/default/css/function.select.less
+++ b/layout/default/css/function.select.less
@@ -1,6 +1,7 @@
 .select-wrapper {
 	display: inline-block;
 	position: relative;
+	max-width: 100%;
 
 	.button {
 		display: inline-block;
